# entropic-mfg

./: .gitignore  CMakeLists.txt  CongestionOperator.h  KLOperator.h  Kernels.h  Laplacian.h  MessagePassing.cpp  MessagePassing.h  MultiSinkhorn.cpp  MultiSinkhorn.h  README.md  RectangularGridLaplacian.h  Utils.h  main.cpp  test.py
examples/: CMakeLists.txt  congestion.py  crowdmodel.cpp  kernelplot.cpp
include/: Kernels.h  MessagePassing.h  MultiSinkhorn.h  Utils.h  metrics.h  progressbar.h
include/kernels/: Geometric.h  RectangularGridLaplacian.h
include/operators/: CongestionOperator.h  KLOperator.h
python/: CMakeLists.txt  bindings.cpp  kernels.cpp  operators.cpp  sinkhorn.cpp
python/examples/: congestion.py  test.py
src/: MessagePassing.cpp  MultiSinkhorn.cpp
tests/: test_prox_subclass.py
